# agori

./: pyproject.toml  requirements-dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: publish-package.yml  python-package.yml  test-publish.yml
src/: __init__.py  core.py  exceptions.py
src/agori/: __init__.py  core.py  reportmaestro.py  utils.py
tests/: test_core.py
tests/decision_frameworks/: conftest.py
