[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agori"
version = "0.1.0"
description = "A user-friendly wrapper for ChromaDB with Azure OpenAI embeddings"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["chromadb", "azure", "openai", "embeddings", "vector-database", "semantic-search"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "chromadb",
    "openai",
    "langchain",
    "pypdf"
]

[project.urls]
"Homepage" = "https://github.com/govindshukl/agori"
"Bug Tracker" = "https://github.com/govindshukl/agori/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agori"]